--- a/site/public/stylesheets/site.css
+++ b/site/public/stylesheets/site.css
@@ -1,25 +1,85 @@
+/*
+  Draft CSS for the site
+
+  Notes:
+
+  $gridGutterWidth changes based on responsive layout - we need to have a single responsive style
+  per element that depends on it (maybe define $gridGutterWidthLarge and use it in responsive.scss)
+
+  SASS 3.0 doesn't support inlining media queries - we need to upgrade
+
+  Navbar markup seems to be correct, but needs lots of love at smaller resolutions
+
+  Continue to pull out variables
+
+  Simplify login link behavior - lots of styles for fairly simple markup
+
+ */
+.ribbon {
+  position: relative;
+  /* margin-left: -Xpx; */ }
+
+.ribbon > .ribbon-content {
+  z-index: 1;
+  position: relative;
+  /* padding-left: Xpx; */ }
+
+.ribbon > .ribbon-left {
+  content: " ";
+  position: absolute;
+  left: 0;
+  /* border-top: Ypx solid color;
+     bottom: -Ypx;
+     border-left: Xpx solid transparent;
+     */ }
+
 #top {
-  background-color: black;
+  background-color: #010101;
   color: white; }
 
 #nav {
-  background-color: #333;
+  background-color: #343434;
   color: white; }
 
 #content {
-  background-color: #eee; }
+  background-color: #eaeaea; }
 
 .column-nav {
-  background-color: black;
+  background-color: #030303;
   color: white; }
 
 .column-content {
   background-color: white; }
 
 #content > .container > div > .row {
-  background-color: #f5f5f5; }
+  background-color: #f2f2f2; }
 
 /* Nav section */
+#top > .container > div {
+  padding: 8px 0; }
+  #top > .container > div > a {
+    color: #aaaaaa;
+    font-weight: bold;
+    text-transform: uppercase; }
+  #top > .container > div > a:hover {
+    text-decoration: none;
+    color: #343434;
+    background-color: #eaeaea; }
+#top > .container > div.login {
+  padding: 5px 0;
+  /* may want to turn these into some sort of specific styled button */ }
+  #top > .container > div.login > a {
+    color: #eaeaea;
+    padding: 3px 10px;
+    display: inline-block;
+    background-color: #343434; }
+  #top > .container > div.login > a.login-provider {
+    height: 18px; }
+  #top > .container > div.login > a:hover {
+    text-decoration: none;
+    color: #343434;
+    background-color: #eaeaea; }
+
 .navbar {
   padding-top: 30px;
   height: 130px;
@@ -42,7 +102,7 @@
     /* needs fixing */ }
     .navbar .nav > li {
       float: left;
-      width: 25%;
+      width: 20%;
       text-align: center; }
       .navbar .nav > li > a {
         color: white;
@@ -87,6 +147,10 @@
     width: 50% !important;
     text-align: center !important; } }
 
+@media (max-width: 767px) {
+  .navbar .nav > li.divider {
+    display: none; } }
+
 /*End FIXME*/
 .messaging {
   margin-bottom: 30px;
@@ -108,6 +172,7 @@
     background-color: black; }
 
   .messaging {
+    text-align: left;
     margin-bottom: 10px; }
     .messaging .primary {
       font-size: 20px;
@@ -120,61 +185,54 @@
 #nav {
   padding-bottom: 100px; }
 
-#content .lift .column-nav {
+.lift .column-nav {
   margin-top: -80px; }
-
-#content .lift .column-content {
+.lift .column-content {
   margin-top: -90px; }
-
-#content .lift .column-content h1 {
+.lift .column-content h1 {
   margin-top: 25px;
   margin-bottom: 25px; }
 
-#content .row > .column-nav {
-  margin-left: 0;
-  padding-right: 20px; }
-
-#content .row > .column-content {
-  margin-left: 0px;
-  padding-left: 20px;
-  margin-right: -20px;
-  padding-right: 20px; }
+/* The body content of a site page */
+.row-content {
+  margin-bottom: 20px; }
+  .row-content > .column-nav {
+    margin-left: 0;
+    padding-right: 20px; }
+  .row-content > .column-content {
+    margin-left: 0px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 30px; }
 
 @media (max-width: 767px) {
   #nav {
     padding-bottom: 30px; }
 
-  #content .container {
+  #content > .container {
     padding: 0; }
 
-  #content .row > .column-content {
-    margin-right: 0; }
-
-  #content .lift .column-nav {
+  .lift .column-nav {
+    margin-top: 0; }
+  .lift .column-content {
     margin-top: 0; }
 
-  #content .lift .column-content {
-    margin-top: 0; } }
-
-#content .row > .column-content {
-  padding-bottom: 30px; }
-
-#content .row {
-  margin-bottom: 20px; }
+  .row-content > .column-content {
+    margin-right: 0; } }
 
 /* Left nav section */
-#content .column-nav .nav-location {
+.column-nav .nav-location {
   font-size: 19px;
   line-height: 46px;
   text-transform: uppercase;
   margin-top: 15px; }
-
-#content .column-nav > * {
+.column-nav > * {
   margin-left: 20px; }
-
-#content .column-nav > .nav-stacked {
+.column-nav > .nav-stacked {
   margin-left: 10px; }
 
+/* Stacked navigations indent by 1 gutter each time */
 .nav-stacked .nav-stacked {
   margin-left: 20px;
   margin-bottom: 0; }
@@ -188,38 +246,17 @@
     display: none; } }
 
 /* Body */
-.ribbon {
-  position: relative;
-  /* margin-left: -Xpx; */ }
-
-.ribbon > .ribbon-content {
-  z-index: 1;
-  position: relative;
-  /* padding-left: Xpx; */ }
-
-.ribbon > .ribbon-left {
-  content: " ";
-  position: absolute;
-  left: 0;
-  /* border-top: Ypx solid color;
-     bottom: -Ypx;
-     border-left: Xpx solid transparent;
-     */ }
-
 #content h1.ribbon {
   margin-left: -30px; }
-
-#content h1.ribbon > .ribbon-content {
-  background-color: red;
-  color: white;
-  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
-  display: inline-block; }
-
-#content h1.ribbon > .ribbon-content {
-  padding: 5px 20px 5px 30px;
-  min-width: 30%; }
-
-#content h1.ribbon > .ribbon-left {
-  border-top: 10px solid #aa0000;
-  bottom: -10px;
-  border-left: 10px solid transparent; }
+  #content h1.ribbon > .ribbon-left {
+    border-top: 10px solid #91010b;
+    bottom: -10px;
+    border-left: 10px solid transparent; }
+  #content h1.ribbon > .ribbon-content {
+    background-color: #eb0011;
+    color: white;
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    padding: 5px 20px 5px 30px;
+    /* calculated to match above */
+    min-width: 30%; }
