cleanup all the old command usage in help and messages

--- a/cartridges/jbossas-7/template/src/main/webapp/index.html
+++ b/cartridges/jbossas-7/template/src/main/webapp/index.html
@@ -270,10 +270,10 @@ jrcq3gYOyVkvcjjwUWA53iD6KaGAhISEvC/xg+QaYFQiHivqXVAh7w7hLxKGhIS8XzkHeCoUj/cv
     Place your application here
   </p>
   <p>
-    In order to commit to your new project, go to your projects git repo  (created with the rhc-create-app command) directory.
+    In order to commit to your new project, go to your projects git repo  (created with the rhc app create command) directory.
   </p>
   <p>
-    For example, if you named your application myfirstapp (by passing in -a myfirstapp to the rhc-create-app command),
+    For example, if you named your application myfirstapp (by passing in -a myfirstapp to the rhc app create command),
       you would find the contents of this app located under myfirstapp/src/main/webapp. You can edit that and push your
       changes from the myfirstapp directory by running:
   </p>
