start selenium tests for new console
 * add some working tests and stubs
 * add ids and classes to accounts page to make testing easier

--- a/site/app/views/user/show.html.haml
+++ b/site/app/views/user/show.html.haml
@@ -27,7 +27,7 @@
       - if @domain
         .well
           http://applicationname&ndash;
-          %strong>= @domain.name
+          %strong.namespace>= @domain.name
           = ".rhcloud.com"
         .btn-toolbar
           = link_to "Change your namespace...", edit_domain_path, :class => 'btn'
