--- a/site/app/views/user/show.html.haml
+++ b/site/app/views/user/show.html.haml
@@ -42,14 +42,18 @@
         OpenShift uses public keys to securely encrypt the connection between your local machine and your application and to authorize you to upload code. You must create a private and public key on your local machine and then upload the public key before you can connect to your applications' Git repositories.
         = link_to "Read our User Guide topic on keys.", ssh_key_user_guide_topic_url
 
-      -if @keys.empty?
-        = render :partial => 'keys/simple_form', :locals => { :key => Key.new, :input_class => 'span4' }
-      -else
-        %table.table.table-condensed.table-striped
-          - @keys.each do |key|
-            %tr
-              %td= key.name
-              %td.code= key.display_content
-              %td= link_to 'Delete', key_path(key), :class => 'btn btn-mini btn-danger', :method => :delete, :confirm => "Are you sure you want to delete your key '#{key.name}'?"
-        .btn-toolbar
-          = link_to "Add a new key...", new_key_path, :class => 'btn'
+      -# remove this check when we implement the user story for allowing keys to be set prior to domain
+      - if @domain
+        - if @keys.empty?
+          = render :partial => 'keys/simple_form', :locals => { :key => Key.new, :input_class => 'span4' }
+        - else
+          %table.table.table-condensed.table-striped
+            - @keys.each do |key|
+              %tr
+                %td= key.name
+                %td.code= key.display_content
+                %td= link_to 'Delete', key_path(key), :class => 'btn btn-mini btn-danger', :method => :delete, :confirm => "Are you sure you want to delete your key '#{key.name}'?"
+          .btn-toolbar
+            = link_to "Add a new key...", new_key_path, :class => 'btn'
+      - else
+        %p You must set your namespace before you add public keys.
