--- a/site/app/views/domains/_form.html.haml
+++ b/site/app/views/domains/_form.html.haml
@@ -1,12 +1,12 @@
 = semantic_form_for domain, :url => domain_path, :simple => true, :html => {:class => 'form-inline'} do |f|
   = f.semantic_errors
-  .control-group.control-group-important{:class => domain.errors[:name].present? ? 'error' : ''}
+  .control-group.control-group-important{:class => domain.errors[:namespace].present? ? 'error' : ''}
     .controls
       .input-prepend-append
         %span.add-on-first> http://applicationname&ndash;
         = f.text_field :name, :autofocus => true, :placeholder => 'Namespace'
         %span.add-on-last> .rhcloud.com
-      = f.inline_errors_for :name
+      = f.inline_errors_for :namespace
       .help-block Your namespace must be letters or numbers with no spaces or symbols.
   = f.buttons do
     = f.commit_button :label => domain.persisted? ? 'Save' : 'Create'
