Integrating markup and style for the new console

--- a/site/app/stylesheets/_console.scss
+++ b/site/app/stylesheets/_console.scss
@@ -81,7 +81,7 @@ section#app-cartridges .cartridge-block {
 		float: none;
 		}
 }
-@media max-width: 768px) {
+@media (max-width: 768px) {
 	#my-apps li h2 {
 		float: right;
 		}
