--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -6,7 +6,9 @@
 - application_partial = lots_of_applications ? 'applications/application_compact' : 'applications/application_overview'
 
 %section#attention
-  %p.hero-unit ATTENTION MESSAGES HERE
+  %p.hero-unit 
+    ATTENTION MESSAGES HERE
+    %a.pull-right{:href => '#'} View details
 
 .row
   %section#my-apps.span8
