--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -19,14 +19,16 @@
     - else
       .container#content
         
-        .alert.alert-info.new-console
-          %p
-            %strong Preview
+        %section#attention
+          %p.hero-unit 
+            %strong Preview:
             This is a preview of the new OpenShift Management Console. There may be a few 
             minor glitches as we straighten things up &ndash; if you hit a problem or want to 
             let us know how you feel about the new console,
-            #{link_to "post in the Express forum", post_to_forum_url}.
-          %p= link_to "<< Back to the Control Panel", control_panel_path
+            #{link_to "post in the Express forum", post_to_forum_url} or
+            #{link_to "fill a bug", '#'}.
+            %br
+            #{link_to "« Back to the Control Panel", control_panel_path}
 
         = flashes
         = yield
