--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -27,7 +27,7 @@ ul, ol {
 	}
 ul.regular, ol.regular {margin: 0 0 9px 30px;padding: 0;}
 ul.unstyled-flat {list-style: none;}
-ul.unstyled-flat li {list-style: none;margin: 0;}
+ul.unstyled-flat li {list-style: none;}
 ol.unstyled {margin-left: 0;list-style: none;}
 .page-header {
 	padding-bottom: 0;
