Breadcrumbs matching style

--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -1,2 +1,6 @@
-$cliText:       #000C5A;
-$cliBackground: #E9ECFF;
+$cliText:                   #000C5A;
+$cliBackground:             #E9ECFF;
+
+$breadcrumbDividerColor:    #91010b;
+$breadcrumbTextColor:       #343434;
+
