--- a/site/app/stylesheets/bootstrap.scss
+++ b/site/app/stylesheets/bootstrap.scss
@@ -50,7 +50,8 @@
 // Components: Nav
 @import "bootstrap/navs";
 @import "bootstrap/navbar";
-@import "bootstrap/breadcrumbs";
+//@import "bootstrap/breadcrumbs";
+@import "breadcrumbs";
 @import "bootstrap/pagination";
 @import "bootstrap/pager";
 
