--- a/site/public/stylesheets/bootstrap.css
+++ b/site/public/stylesheets/bootstrap.css
@@ -2229,32 +2229,17 @@ input[type="submit"].btn {
     right: 13px; }
 
 .breadcrumb {
-  padding: 7px 14px;
-  margin: 0 0 18px;
-  background-color: #fbfbfb;
-  background-image: -moz-linear-gradient(top, white, #f5f5f5);
-  background-image: -ms-linear-gradient(top, white, #f5f5f5);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#f5f5f5));
-  background-image: -webkit-linear-gradient(top, white, #f5f5f5);
-  background-image: -o-linear-gradient(top, white, #f5f5f5);
-  background-image: linear-gradient(top, white, #f5f5f5);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='white', endColorstr='#f5f5f5', GradientType=0), white, #f5f5f5;
-  border: 1px solid #ddd;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 0 white;
-  -moz-box-shadow: inset 0 1px 0 white;
-  box-shadow: inset 0 1px 0 white; }
+  padding: 7px 0;
+  margin: 0 0 18px; }
   .breadcrumb li {
-    display: inline-block;
+    display: inline;
     text-shadow: 0 1px 0 white; }
   .breadcrumb .divider {
     padding: 0 5px;
-    color: #999999; }
-  .breadcrumb .active a {
-    color: #333333; }
+    color: #91010b; }
+  .breadcrumb a,
+  .breadcrumb a:hover {
+    color: #343434; }
 
 .pagination {
   height: 36px;
@@ -3630,19 +3615,6 @@ input:focus, textarea:focus {
 
 .navbar .navbar-text a {
   color: #999; }
-
-.breadcrumb {
-  margin: 0 0 18px; }
-
-.breadcrumb li {
-  display: inline; }
-
-.breadcrumb .divider {
-  padding: 0 5px;
-  color: #ccc; }
-
-.breadcrumb .active a {
-  color: #8F8F8F; }
 
 .hero-unit {
   padding: 20px 25px;
