--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -469,6 +469,7 @@ input:focus, textarea:focus {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  word-wrap: break-word;
 	}
 .alert, .alert-heading {
   color: #222;
