--- a/site/public/stylesheets/bootstrap.css
+++ b/site/public/stylesheets/bootstrap.css
@@ -3069,8 +3069,7 @@ ul.unstyled-flat {
   list-style: none; }
 
 ul.unstyled-flat li {
-  list-style: none;
-  margin: 0; }
+  list-style: none; }
 
 ol.unstyled {
   margin-left: 0;
