--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -7,7 +7,7 @@
 
       %span.navbar-text.headline 
         Management Console
-        %span.label.label-important{:style => 'font-size: 18px;'} Preview
+        %span.label.label-important{:style => 'vertical-align:top'} Preview
 
       -#= link_to root_path, :class => 'brand' do
         Open
