--- a/site/public/stylesheets/console.css
+++ b/site/public/stylesheets/console.css
@@ -66,6 +66,9 @@
 #app-unique-info h5 {
   border-bottom: 1px solid #eee; }
 
+#app-unique-info a {
+  word-wrap: break-word; }
+
 section#app-cartridges .cartridge-block {
   background: #f0f0f0 url("http://placehold.it/60&text=img") 15px 15px no-repeat;
   margin-bottom: 15px; }
@@ -89,21 +92,15 @@ section#app-cartridges > header {
 
   #my-apps li h2 {
     float: none; } }
-
 @media (max-width: 768px) {
   #my-apps li h2 {
     float: right; } }
-
 @media (min-width: 768px) and (max-width: 980px) {
   #my-apps li h2 {
     float: none; }
 
   #my-apps .status {
     position: static; } }
-
-@media (max-width: 980px) {}
-@media (min-width: 980px) {}
-@media (min-width: 1200px) {}
 .show-grid [class*="span"] {
   background-color: #c0ddf3;
   margin-bottom: 1px; }
